[package]
name = "yz"
version = "0.1.0"
authors = ["s3halt <s3halt@gmail.com>"]
edition = "2018"

[dependencies]
surf = "2.1"
async-std = "1.8"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
